<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/fundName"
        android:layout_width="100dp"
        android:layout_height="122dp"
        android:background="@drawable/bg_rounded_fill"
        android:orientation="vertical"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_fund_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bni"
            android:contentDescription="@string/icon_reksa_dana" />

        <TextView
            android:id="@+id/tv_fund_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_dimen"
            android:theme="@style/BoldText"
            tools:text="BNI-AM Inspiring Equity Fund" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_jenis_reksa_dana"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundName" />

    <LinearLayout
        android:id="@+id/fundType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/tv_fund_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="Saham" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_imbal_hasil"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundType" />

    <LinearLayout
        android:id="@+id/fundYield"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tv_fund_yield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="5,50% / 5 thn" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_dana_kelolaan"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundYield" />

    <LinearLayout
        android:id="@+id/managedFund"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/tv_fund_managed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="3,64 Miliar" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_min_pembelian"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managedFund" />

    <LinearLayout
        android:id="@+id/minimumPurchase"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/tv_minimum_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="1 Juta" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_jangka_waktu"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimumPurchase" />

    <LinearLayout
        android:id="@+id/timePeriod"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/tv_time_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="5 Tahun" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_tingkat_risiko"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePeriod" />

    <LinearLayout
        android:id="@+id/riskLevel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/tv_risk_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="Tinggi" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_peluncuran"
        android:theme="@style/NormalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskLevel" />

    <LinearLayout
        android:id="@+id/launchDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_fill"
        android:padding="@dimen/medium_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BoldText"
            tools:text="16 Apr 2014" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_outline"
        android:text="@string/text_detail"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:theme="@style/ButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchDate" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_fill"
        android:backgroundTint="@color/green_500"
        android:text="@string/txt_beli"
        android:textAllCaps="false"
        android:theme="@style/ButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

</androidx.constraintlayout.widget.ConstraintLayout>